--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-opencv-python-headless
+opencv-python-headless>=4.5.5
 face_recognition @ git+https://github.com/ravinder2023/dlib_face_recognition.git
-tensorflow
-keras
+tensorflow>=2.10.0
+keras>=2.10.0
 pandas
 numpy
